// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic 1`] = `
<div>
  <p>
    <em>
      italic
    </em>
     
    <strong>
      bold
    </strong>
     
    <code
      className={undefined}
      data-sourcepos={undefined}
    >
      code
    </code>
  </p>
</div>
`;

exports[`media 1`] = `
<div>
  <p>
    <mock-media
      alt=""
      src=""
      title={undefined}
    />
  </p>
</div>
`;

exports[`safe (mixed) 1`] = `
<div>
  <p>
    testtest
  </p>
</div>
`;

exports[`safe (mixed) 2`] = `
<div>
  <p>
    testtesttest
  </p>
</div>
`;

exports[`safe (mixed) 3`] = `
<div>
  <p>
    testtesttest
  </p>
</div>
`;

exports[`safe (mixed) 4`] = `
<div>
  <p>
    testtesttest
  </p>
</div>
`;

exports[`safe 1`] = `<div />`;

exports[`safe 2`] = `<div />`;

exports[`safe 3`] = `
<div>
  <p>
    test
  </p>
</div>
`;

exports[`safe 4`] = `
<div>
  <p>
    test
  </p>
</div>
`;

exports[`soft break 1`] = `
<div>
  <p>
    Hello,
    <br />
    world!
  </p>
</div>
`;
